--- a/assets/css/wiki.css
+++ b/assets/css/wiki.css
@@ -2,6 +2,7 @@
 
 body {
     font-size: 14px;
+    font-family:'Georgia', serif;
 }
 body p {
     font-size: 14px;
@@ -10,6 +11,8 @@ body p {
 }
 h1,h2,h3,h4,h5,h6 {
     font-weight: normal;
+    font-family: 'Garamond', 'Georgia', serif;
+    margin: 0px;
 }
 li {
     line-height: 22px;
@@ -35,21 +38,20 @@ pre {
     margin-right: auto;
 }
 .navbar .brand {
-    color: #fff;
+    color: #000;
     font-size: 26px;
-    padding: 8px 20px 6px;
+    padding: 12px 20px 8px;
     text-decoration: none;
     font-family: 'Garamond', 'Georgia', serif;
 }
 .page-header {
-    padding-bottom: 4px;
+    padding-bottom: 0px;
+    margin: 20px 0px;
     border-bottom: 1px dashed #000;
 }
 .footer {
-    margin-top: 40px;
+    margin-top: 30px;
     padding-top: 5px;
-    padding-left: 10px;
-    border-top: 1px dashed #000;
 }
 .footer p {
     font-size: 13px;
